<resources>
    <string name="app_name">Spot Parking</string>
    <string name="book">Book Your Parking</string>
    <string name="sign_in">Sign in with email</string>
    <string name="or">or</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="phone">Phone</string>
    <string name="apple">Apple</string>
    <string name="sign_up">Don\'t have an account? <u>Sign up</u></string>
</resources>